--- a/socket/client/index.html
+++ b/socket/client/index.html
@@ -7,17 +7,16 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io({
-        auth: {
-          token:
-            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYyM2U5NDI2M2FlMGQ5MmNmNGIwZmIyOSIsImlhdCI6MTY0ODI2ODMzMywiZXhwIjoxNjUwODYwMzMzfQ.iUUbOcikvu0co4GKBTHXda81TQVMs0W4mucmLEhPqyo",
-        },
-      });
-      socket.on("my notification", (data) => {
-        console.log(data);
-      });
+      // var socket = io({
+      //   auth: {
+      //     token:
+      //       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYyM2U5NDI2M2FlMGQ5MmNmNGIwZmIyOSIsImlhdCI6MTY0ODI2ODMzMywiZXhwIjoxNjUwODYwMzMzfQ.iUUbOcikvu0co4GKBTHXda81TQVMs0W4mucmLEhPqyo",
+      //   },
+      // });
+      // socket.on("my notification", (data) => {
+      //   console.log(data);
+      // });
     </script>
   </body>
 </html>
